@@ -31,9 +31,9 @@ public class ListManager implements ListManagerI{
     }
 
     @Override
-    public synchronized TaskList addList(long id, String name, String color) throws InvalidActionException {
+    public synchronized TaskList addList(long id, String name, String color) throws InvalidActionException, DuplicateIdException {
         if (getList(id).isPresent())
-            return null;
+            throw new DuplicateIdException("List with id already exists.");
         if (name == null)
             throw new InvalidActionException("List name must not be null.");
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
@@ -42,7 +42,6 @@ public class ListManager implements ListManagerI{
         values.put("NAME", name);
         values.put("COLOR", color);
         db.insert("LISTS", null, values);
-        db.close();
         return new TaskList(id, name, color);
     }
 
@@ -60,14 +59,11 @@ public class ListManager implements ListManagerI{
         values.put("PROFILE", profile);
         values.put("LIST", listId);
         db.insert("PROFILE_LIST", null, values);
-        db.close();
     }
 
     @Override
     public synchronized void removeUserProfileFromList(long user, int profile, long list) {
-
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-
         db.delete("PROFILE_LIST", "USER = ? AND PROFILE = ? AND LIST = ?",
                 new String[]{String.valueOf(user), String.valueOf(profile), String.valueOf(list)});
         ContentValues contentValues = new ContentValues();
@@ -76,12 +72,10 @@ public class ListManager implements ListManagerI{
         db.update("TASKS", contentValues, "USER = ? AND PROFILE = ? AND LIST = ?", new String[]{
                 String.valueOf(user), String.valueOf(profile), String.valueOf(list)
         });
-        db.close();
     }
 
     @Override
     public synchronized void removeList(long id) {
-
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
         db.delete("LISTS", "ID = ?", new String[]{String.valueOf(id)});
         db.delete("PROFILE_LIST", "LIST = ?", new String[]{String.valueOf(id)});
@@ -89,7 +83,6 @@ public class ListManager implements ListManagerI{
         values.put("LIST", (Long) null);
         values.put("LIST_POSITION", (Long) null);
         db.update("TASKS", values, "LIST = ?", new String[]{String.valueOf(id)});
-        db.close();
     }
 
     @Override
@@ -100,7 +93,7 @@ public class ListManager implements ListManagerI{
         cursor.close();
         if (entries.size() != 1)
             return;
-        updateList(entries.get(0), listId);
+        updateList(entries.getFirst(), listId);
     }
 
     @Override
@@ -108,18 +101,14 @@ public class ListManager implements ListManagerI{
         Optional<TaskList> existingList = getList(newId);
         if (existingList.isPresent())
             throw new DuplicateIdException("List id already exists: id + " + newId);
-
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-
         ContentValues values = new ContentValues();
         values.put("ID", newId);
         db.update("LISTS", values, "ID = ?", new String[]{String.valueOf(list)});
-
         values = new ContentValues();
         values.put("LIST", newId);
         db.update("PROFILE_LIST", values, "LIST = ?", new String[]{String.valueOf(list)});
         db.update("TASKS", values, "LIST = ?", new String[]{String.valueOf(list)});
-        db.close();
     }
 
     @Override
@@ -127,18 +116,14 @@ public class ListManager implements ListManagerI{
         if (name == null)
             throw new InvalidActionException("Name must not be null.");
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-
         ContentValues values = new ContentValues();
         values.put("NAME", name);
         db.update("LISTS", values, "ID = ?", new String[]{String.valueOf(list)});
-        db.close();
-
     }
 
     @Override
     public List<Task> getListEntries(long user, int profile, Long listId) {
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-
         Cursor cursor;
         if (listId == null)
             cursor = db.rawQuery("SELECT * FROM TASKS WHERE USER = ? AND PROFILE = ? AND LIST IS NULL",
@@ -148,7 +133,6 @@ public class ListManager implements ListManagerI{
                     new String[]{String.valueOf(user), String.valueOf(profile), String.valueOf(listId)});
         List<Task> entries = TaskManager.getListOfTasks(cursor);
         cursor.close();
-        db.close();
         if (listId != null)
             return entries.stream().sorted(Comparator.comparing(Task::getListPosition)).toList();
         return entries.stream().sorted(Comparator.comparing(Task::getPosition)).toList();
@@ -156,39 +140,34 @@ public class ListManager implements ListManagerI{
 
     @Override
     public Optional<TaskList> getList(long id) {
-        SQLiteDatabase database = zenSqLiteHelper.getReadableDatabase();
-        Cursor cursor = database.rawQuery("SELECT * FROM LISTS WHERE ID = ?", new String[]{String.valueOf(id)});
+        SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
+        Cursor cursor = db.rawQuery("SELECT * FROM LISTS WHERE ID = ?", new String[]{String.valueOf(id)});
         List<TaskList> lists = getListOfTaskList(cursor);
         cursor.close();
-        database.close();
         if (lists.size() != 1)
             return Optional.empty();
-        return Optional.of(lists.get(0));
+        return Optional.of(lists.getFirst());
     }
 
     @Override
     public Optional<TaskList> getListByName(long user, int profile, String name) {
-        SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-
+        SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
         Cursor cursor = db.rawQuery("SELECT * FROM LISTS JOIN PROFILE_LIST ON ID = LIST WHERE USER = ? AND PROFILE = ? AND NAME = ?",
                 new String[]{String.valueOf(user), String.valueOf(profile), String.valueOf(name)});
         List<TaskList> list = getListOfTaskList(cursor);
         cursor.close();
-        db.close();
         if (list.size() != 1)
             return Optional.empty();
-        return Optional.of(list.get(0));
+        return Optional.of(list.getFirst());
     }
 
     @Override
     public List<TaskList> getListsForUser(long user, int profile) {
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-
         Cursor cursor = db.rawQuery("SELECT * FROM LISTS JOIN PROFILE_LIST ON LIST = ID WHERE USER = ? AND PROFILE = ?",
                 new String[]{String.valueOf(user), String.valueOf(profile)});
         List<TaskList> list = getListOfTaskList(cursor);
         cursor.close();
-        db.close();
         return list;
     }
 
@@ -198,19 +177,14 @@ public class ListManager implements ListManagerI{
         Cursor cursor = db.rawQuery("SELECT * FROM LISTS", null);
         List<TaskList> list = getListOfTaskList(cursor);
         cursor.close();
-
-        db.close();
         return list;
     }
 
     public synchronized void updateList(Task task, Long list){
-
         if (task == null)
             return;
-
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
         ContentValues values = new ContentValues();
-
         Integer position = null;
         if (list != null) {
             Cursor cursor = db.rawQuery("SELECT 1 FROM TASKS WHERE LIST=?", new String[]{String.valueOf(list)});
@@ -224,21 +198,17 @@ public class ListManager implements ListManagerI{
             }
             cursor.close();
         }
-
         values.put("LIST", list);
         values.put("LIST_POSITION", position);
         db.update("TASKS", values, "ID=?", new String[]{String.valueOf(task.getId())});
-
         if (task.getList() != null && !Objects.equals(task.getList(), list)) {
             db.execSQL("UPDATE TASKS SET LIST_POSITION=LIST_POSITION - 1 WHERE LIST=? AND LIST_POSITION >?", new String[]{String.valueOf(task.getList()), String.valueOf(task.getListPosition())});
         }
-        db.close();
         task.setList(list);
         task.setListPosition(position);
     }
     @Override
     public synchronized void swapListEntries(long userId, int profile, long list, long id, int position) throws PositionOutOfBoundException {
-
         List<Task> listEntries = getListEntries(userId, profile, list);
         if (position >= listEntries.size())
             throw new PositionOutOfBoundException("List position is out of bounds.");
@@ -246,35 +216,25 @@ public class ListManager implements ListManagerI{
         Optional<Task> taskOther = listEntries.stream().filter(e -> e.getListPosition() == position).findFirst();
         if (task.isEmpty() || taskOther.isEmpty())
             return;
-
         swapListEntries(task.get(), task.get().getListPosition(), taskOther.get(), position);
     }
 
     synchronized void swapListEntries(Task task, int posOld, Task taskOther, int pos){
-
         List<Task> listOld = getListEntries(task.getUserId(), task.getProfile(), task.getList());
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-
         ContentValues values1 = new ContentValues();
         values1.put("LIST_POSITION", posOld);
         db.update("TASKS", values1, "LIST = ? AND ID = ?",
                 new String[]{String.valueOf(task.getList()), String.valueOf(taskOther.getId())});
-
         ContentValues values0 = new ContentValues();
         values0.put("LIST_POSITION", pos);
         db.update("TASKS", values0, "LIST = ? AND ID = ?",
                 new String[]{String.valueOf(task.getList()), String.valueOf(task.getId())});
-
-        db.close();
-        List<Task> listNew = getListEntries(task.getUserId(), task.getProfile(), task.getList());
-
     }
     @Override
     public synchronized void updateListColor(long list, String color){
-
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
         ContentValues values = new ContentValues();
-
         values.put("COLOR", color);
         int updatedRows = db.update("LISTS", values, "ID=?", new String[]{String.valueOf(list)});
 
@@ -282,14 +242,10 @@ public class ListManager implements ListManagerI{
             values.put("ID", list);
             db.insert("LISTS", null, values);
         }
-
-        db.close();
     }
     public static List<TaskList> getListOfTaskList(Cursor cursor){
-
         List<TaskList> list = new ArrayList<>();
         cursor.moveToFirst();
-
         while (!cursor.isAfterLast()){
 
             long id = cursor.getLong(0);
@@ -299,7 +255,6 @@ public class ListManager implements ListManagerI{
             list.add(taskList);
             cursor.moveToNext();
         }
-
         return list;
     }
     public long getUniqueUserId(){
