@@ -19,10 +19,7 @@ import java.time.LocalDate;
 import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.HashMap;
-import java.util.Hashtable;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Random;
@@ -64,10 +61,6 @@ public class TaskManager implements TaskManagerI {
         return Optional.of(tasks.getFirst());
     }
 
-    /**
-     * @param task
-     * @return
-     */
     @Override
     public synchronized Task addNewTask(long userId, int profile, String task) {
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
@@ -131,7 +124,6 @@ public class TaskManager implements TaskManagerI {
 
     }
 
-    //adds new Task to TASKS
     @Override
     public synchronized Task addNewTask(long userId, int profile, long id, String task, int position) throws DuplicateIdException, PositionOutOfBoundException, InvalidActionException {
         if (id == 0)
@@ -141,38 +133,32 @@ public class TaskManager implements TaskManagerI {
             throw new PositionOutOfBoundException("Position is out of bound: position" + position);
         if (entries.stream().map(Task::getId).toList().contains(id))
             throw new DuplicateIdException("Task with id already exists: id " + id);
-
         ContentValues values = new ContentValues();
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-
         values.put("ID", id);
         values.put("USER", userId);
         values.put("TASK", task);
         values.put("POSITION", position);
         values.put("PROFILE", profile);
-
         db.execSQL("UPDATE TASKS SET POSITION=POSITION+1 WHERE POSITION >=?", new String[]{String.valueOf(position)});
-        long result = db.insert("TASKS", null, values);
-
-
+        db.insert("TASKS", null, values);
         return new Task(userId, profile, id, task, position);
     }
 
     /**
-     * @param Task
+     * Remove a task.
+     * @param task task to remove
      */
-    synchronized void removeTask(Task Task) {
+    synchronized void removeTask(Task task) {
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-        if (Task.getUserId() == null)
-            db.delete("TASKS", "ID=? AND USER IS NULL AND PROFILE=?", new String[]{String.valueOf(Task.getId()), String.valueOf(Task.getProfile())});
+        if (task.getUserId() == null)
+            db.delete("TASKS", "ID=? AND USER IS NULL AND PROFILE=?", new String[]{String.valueOf(task.getId()), String.valueOf(task.getProfile())});
         else
-            db.delete("TASKS", "ID=? AND USER=? AND PROFILE=?", new String[]{String.valueOf(Task.getId()), String.valueOf(Task.getUserId()), String.valueOf(Task.getProfile())});
-        db.execSQL("UPDATE TASKS SET POSITION=POSITION-1 WHERE POSITION >?", new String[]{String.valueOf(Task.getPosition())});
-        if (Task.getList() != null)
-            db.execSQL("UPDATE TASKS SET LIST_POSITION=LIST_POSITION-1 WHERE LIST=? AND LIST_POSITION>?", new String[]{String.valueOf(Task.getList()), String.valueOf(Task.getListPosition())});
-        ;
+            db.delete("TASKS", "ID=? AND USER=? AND PROFILE=?", new String[]{String.valueOf(task.getId()), String.valueOf(task.getUserId()), String.valueOf(task.getProfile())});
+        db.execSQL("UPDATE TASKS SET POSITION=POSITION-1 WHERE POSITION >?", new String[]{String.valueOf(task.getPosition())});
+        if (task.getList() != null)
+            db.execSQL("UPDATE TASKS SET LIST_POSITION=LIST_POSITION-1 WHERE LIST=? AND LIST_POSITION>?", new String[]{String.valueOf(task.getList()), String.valueOf(task.getListPosition())});
     }
-
 
     @Override
     public synchronized void removeTask(long userId, int profile, long id) {
@@ -182,190 +168,153 @@ public class TaskManager implements TaskManagerI {
         removeTask(task.get());
     }
 
-    public synchronized void updateReminderDate(long userId, int profile, Task Task, Instant value) {
-        updateReminderDate(userId, profile, Task.getId(), value);
-    }
-
     @Override
-    public synchronized void updateReminderDate(long userId, int profile, long id, Instant instant) {
+    public synchronized void updateReminderDate(long user, int profile, long id, Instant instant) {
         if (instant == null)
             return;
         ContentValues values = new ContentValues();
         values.put("REMINDER_DATE", instant.toEpochMilli());
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
         db.update("TASKS", values, "ID=?", new String[]{String.valueOf(id)});
-        ;
-    }
-
-    synchronized void updateTask(long userId, int profile, Task Task, String value) {
-        updateTask(userId, profile, Task.getId(), value);
     }
 
     @Override
-    public synchronized void updateTask(long userId, int profile, long id, String value) {
+    public synchronized void updateTask(long user, int profile, long id, String value) {
         ContentValues values = new ContentValues();
         values.put("TASK", value == null ? "" : value);
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
         db.update("TASKS", values, "ID=?", new String[]{String.valueOf(id)});
-        ;
     }
 
-    void updateRecurrence(Long userId, int profile, Task Task, String value) {
-        updateRecurrence(userId, profile, Task.getId(), Task.getReminderDate(), value);
-    }
-
-    public synchronized void updateRecurrence(long userId, int profile, long id, Instant reminderDate, String value) {
+    /**
+     * Update the reminder date and the recurrence field of a task.
+     * @param user the user id
+     * @param profile the profile id
+     * @param task the task id
+     * @param reminderDate the reminder date
+     * @param recurrence the recurrence
+     */
+    public synchronized void updateRecurrenceAndReminderDate(long user, int profile, long task, Instant reminderDate, String recurrence) {
         ContentValues values = new ContentValues();
-        values.put("RECURRENCE", value);
+        values.put("RECURRENCE", recurrence);
         if (reminderDate == null)
             values.put("REMINDER_DATE", ZenSQLiteHelper.dateToEpoch(Instant.now()));
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-        db.update("TASKS", values, "ID=?", new String[]{String.valueOf(id)});
-        ;
-
+        db.update("TASKS", values, "USER=? AND PROFILE=? AND ID=?", new String[]{
+                String.valueOf(user),
+                String.valueOf(profile),
+                String.valueOf(task)
+        });
     }
 
     @Override
     public synchronized void updateRecurrence(long userId, int profile, long id, String value) {
-
-        updateRecurrence(userId, profile, id, null, value);
-    }
-
-
-    void updateFocus(long userId, int profile, Task Task, boolean valueBool) {
-
-        updateFocus(userId, profile, Task.getId(), valueBool);
+        updateRecurrenceAndReminderDate(userId, profile, id, null, value);
     }
 
     @Override
     public synchronized void updateFocus(long userId, int profile, long id, boolean value) {
-
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
         db.execSQL("UPDATE TASKS SET FOCUS=?, DROPPED = ? WHERE ID=?;", new String[]{String.valueOf(value ? 1 : 0), String.valueOf(0), String.valueOf(id)});
-        ;
-    }
-
-    void updateDropped(Long userId, int profile, Task Task, boolean valueBool) {
-        updateDropped(userId, profile, Task.getId(), valueBool);
     }
 
     @Override
-    public synchronized void updateDropped(long userId, int profile, long id, boolean value) {
-
-        //convert bool to int
+    public synchronized void updateDropped(long user, int profile, long task, boolean value) {
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-        db.execSQL("UPDATE TASKS SET DROPPED=? WHERE ID=?;", new String[]{String.valueOf(value ? 1 : 0), String.valueOf(id)});
-        ;
+        db.execSQL("UPDATE TASKS SET DROPPED=? WHERE USER=? AND PROFILE=? AND ID=?;", new String[]{
+                String.valueOf(value ? 1 : 0),
+                String.valueOf(user),
+                String.valueOf(profile),
+                String.valueOf(task)
+        });
     }
 
-
     @Override
-    public Optional<Task> getTask(long userId, int profile, long id) {
+    public Optional<Task> getTask(long user, int profile, long task) {
         SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-
-        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE USER = ? AND PROFILE = ? AND ID = ?", new String[]{String.valueOf(userId), String.valueOf(profile), String.valueOf(id)});
+        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE USER = ? AND PROFILE = ? AND ID = ?", new String[]{
+                String.valueOf(user),
+                String.valueOf(profile),
+                String.valueOf(task)
+        });
         List<Task> entries = getListOfTasks(cursor);
-
         cursor.close();
         if (entries.size() > 1)
-            throw new RuntimeException("Multiple entries with same id found for user " + userId);
-
-        return !entries.isEmpty() ? Optional.of(entries.get(0)) : Optional.empty();
+            throw new RuntimeException("Multiple entries with same id found for user " + user);
+        return !entries.isEmpty() ? Optional.of(entries.getFirst()) : Optional.empty();
     }
 
     @Override
-    public List<Task> getTasks(long userId, int profile) {
+    public List<Task> getTasks(long user, int profile) {
         SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE USER = ? AND PROFILE = ?", new String[]{String.valueOf(userId), String.valueOf(profile)});
+        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE USER = ? AND PROFILE = ?", new String[]{
+                String.valueOf(user),
+                String.valueOf(profile)
+        });
         List<Task> entries = getListOfTasks(cursor);
         cursor.close();
         return entries.stream().sorted(Comparator.comparing(Task::getPosition)).toList();
     }
 
     /**
-     * TODO DESCRIBE
-     *
-     * @return
+     * Load all entries for the user profile.
+     * @param user the user id
+     * @param profile the profile id
+     * @return a list of tasks for the user profile
      */
-    public List<Task> loadEntries(long userId, int profile) {
+    public List<Task> loadEntries(long user, int profile) {
         SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE USER = ? ORDER BY POSITION", new String[]{String.valueOf(userId)});
+        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE USER=? AND PROFILE=? ORDER BY POSITION", new String[]{
+                String.valueOf(user),
+                String.valueOf(profile)
+        });
         List<Task> entries = getListOfTasks(cursor);
         cursor.close();
         return entries;
     }
 
     /**
-     * TODO DESCRIBE
-     *
-     * @return
+     * Load all tasks that are in FOCUS mode.
+     * @param user the user id
+     * @param profile the profile id
+     * @return a list of tasks in FOCUS mode for the user profile
      */
-    public List<Task> loadFocus(long userId, int profile) {
-
+    public List<Task> loadFocus(long user, int profile) {
         SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-
         long epoch = ZenSQLiteHelper.dateToEpoch(Instant.now());
-
-        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE FOCUS>0 OR (RECURRENCE IS NOT NULL AND REMINDER_DATE <= " + epoch + ")" +
-                " ORDER BY POSITION", null);
-
+        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE USER=? AND PROFILE=? AND " +
+                "(FOCUS>0 OR (RECURRENCE IS NOT NULL AND REMINDER_DATE <= " + epoch + "))" +
+                " ORDER BY POSITION", new String[]{
+                String.valueOf(user),
+                String.valueOf(profile)
+        });
         List<Task> entries = getListOfTasks(cursor);
-
         List<Long> removed = loadRecurring();
-
         cursor.close();
-        ;
-
+        //Remove all tasks that are recurring but have been removed
         return new ArrayList<>(entries.stream().filter(e -> e.getFocus() || !removed.contains(e.getId())).toList());
     }
 
-    /**
-     * TODO DESCRIBE
-     *
-     * @return
-     */
     @Override
     public List<Task> loadDropped(long userID, int profile) {
-
         SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-
         Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE USER = ? AND PROFILE = ? AND DROPPED>0 ORDER BY POSITION",
                 new String[]{String.valueOf(userID), String.valueOf(profile)});
-
         List<Task> entries = getListOfTasks(cursor);
-
         cursor.close();
-
         return entries;
     }
+
 
     /**
-     * TODO DESCRIBE
-     *
-     * @param name
-     * @return
+     * Retrieve a list of tasks from a cursor.
+     * @param cursor the cursor to read from
+     * @return a list of tasks
      */
-    public List<Task> loadList(Long userId, int profile, String name) {
-
-        SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-
-        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE LIST=? ORDER BY LIST_POSITION", new String[]{name});
-
-        List<Task> entries = getListOfTasks(cursor);
-
-        cursor.close();
-        ;
-
-        return entries;
-    }
-
-    //TODO COMMENT
     public static List<Task> getListOfTasks(Cursor cursor) {
         List<Task> entries = new ArrayList<>();
         cursor.moveToFirst();
-
         while (!cursor.isAfterLast()) {
-
             long userId = cursor.getLong(0);
             int profile = cursor.getInt(1);
             long id = cursor.getLong(2);
@@ -377,118 +326,25 @@ public class TaskManager implements TaskManagerI {
             long reminderDateEpoch = cursor.getLong(8);
             String recurrence = cursor.getString(9);
             int position = cursor.getInt(10);
-
-            //TODO ADD USERID!!!
             Task Task = new Task(userId, profile, id, task, position);
             Task.setFocus(focus);
             Task.setDropped(dropped);
-
             if (!(list == null)) {
                 Task.setList(list);
                 Task.setListPosition(listPosition);
             }
-
-
             if (reminderDateEpoch != 0) {
                 Instant reminderDate = ZenSQLiteHelper.epochToDate(reminderDateEpoch);
-
                 if (reminderDate != null)
                     Task.setReminderDate(reminderDate);
             } else
                 Task.setReminderDate(null);
-
             if (!(recurrence == null))
                 Task.setRecurrence(recurrence);
-
             entries.add(Task);
             cursor.moveToNext();
         }
-
         return entries;
-
-    }
-
-
-    /**
-     * TODO DESCRIBE
-     *
-     * @return
-     */
-    public List<String> getLists() {
-
-        SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-
-        Cursor cursor = db.rawQuery("SELECT DISTINCT LIST FROM TASKS WHERE LIST IS NOT NULL ORDER BY LIST", null);
-
-        cursor.moveToFirst();
-
-        List<String> lists = new ArrayList<>();
-
-        while (!cursor.isAfterLast()) {
-            lists.add(cursor.getString(0));
-            cursor.moveToNext();
-        }
-        cursor.close();
-        ;
-
-        return lists;
-
-    }
-
-    /**
-     * TODO DESCRIBE
-     *
-     * @return
-     */
-    public Map<String, TaskList> loadLists() {
-        Map<String, TaskList> lists = new Hashtable<>();
-
-        SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-
-        Cursor cursor = db.rawQuery("SELECT * FROM LISTS", null);
-
-        cursor.moveToFirst();
-
-        while (!cursor.isAfterLast()) {
-
-            long id = cursor.getLong(0);
-            String listName = cursor.getString(1);
-            String color = cursor.getString(2);
-
-            TaskList list = new TaskList(id, listName, color);
-            lists.put(listName, list);
-            cursor.moveToNext();
-        }
-
-
-        cursor.close();
-        ;
-        return lists;
-    }
-
-    /**
-     * TODO DESCRIBE
-     *
-     * @return
-     */
-    public Map<String, String> getListColors() {
-        SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-
-        Cursor cursor = db.rawQuery("SELECT NAME, COLOR FROM LISTS", null);
-
-        cursor.moveToFirst();
-
-        Map<String, String> map = new HashMap<>();
-
-        while (!cursor.isAfterLast()) {
-            map.put(cursor.getString(0), cursor.getString(1));
-            cursor.moveToNext();
-        }
-
-        cursor.close();
-        ;
-
-        return map;
     }
 
     @Override
@@ -505,74 +361,57 @@ public class TaskManager implements TaskManagerI {
         List<Task> entries = getTasks(Task.getUserId(), Task.getProfile());
         if (entries.size() <= pos)
             throw new PositionOutOfBoundException("Position is out of bound: position" + pos);
-
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
-
         ContentValues values1 = new ContentValues();
         values1.put("POSITION", String.valueOf(Task.getPosition()));
         db.update("TASKS", values1, "USER = ? AND PROFILE = ? AND POSITION=?",
                 new String[]{String.valueOf(Task.getUserId()), String.valueOf(Task.getProfile()), String.valueOf(pos)});
-
         ContentValues values0 = new ContentValues();
         values0.put("POSITION", String.valueOf(pos));
         db.update("TASKS", values0, "USER = ? AND PROFILE = ? AND ID=?",
                 new String[]{String.valueOf(Task.getUserId()), String.valueOf(Task.getProfile()), String.valueOf(Task.getId())});
-
-        //clean up
-        ;
+        db.close();
     }
 
     /**
-     * TODO DESCRIBE
-     *
-     * @param arrayList
+     * Save recurring tasks that have been deselected.
+     * @param arrayList list of ids to save
      */
     void saveRecurring(List<Long> arrayList) {
         ByteBuffer buffer = ByteBuffer.allocate(arrayList.size() * Long.BYTES);
         for (long i : arrayList)
             buffer.putLong(i);
-
         try {
             Files.write(Paths.get(zenSqLiteHelper.getContext().getFilesDir() + "/" + LocalDate.now()), buffer.array());
-        } catch (IOException ignored) {
-        }
-
+        } catch (IOException _) {}
     }
 
     /**
-     * TODO DESCRIBE
-     *
-     * @return
+     * Load recurring tasks that have been deselected.
+     * @return list of ids of tasks
      */
     public List<Long> loadRecurring() {
-
         Context context = zenSqLiteHelper.getContext();
         //get all file names in files directory
         String[] fileNames = context.getFilesDir().list();
-
         //get them as File[]
         File[] files = context.getFilesDir().listFiles();
-
         //loop through all files and delete obsolete ones
         for (int i = 0; i < Objects.requireNonNull(fileNames).length; i++) {
-
             //ignore file that stores information whether app is in test mode
             if (fileNames[i].equals("mode"))
                 continue;
-
             try {
                 //if file name (which is a date) is smaller than today, delete it
                 if (LocalDate.parse(fileNames[i]).isBefore(LocalDate.now())) {
                     assert files != null;
                     if (files[i] != null) files[i].delete();
                 }
-
                 // in old versions the file was stored under a different naming logic this block removes old files
             } catch (DateTimeParseException e) {
                 assert files != null;
                 files[i].delete();
             }
-
         }
         try {
             byte[] bytes = Files.readAllBytes(Paths.get(context.getFilesDir() + "/" + LocalDate.now()));
@@ -585,56 +424,49 @@ public class TaskManager implements TaskManagerI {
         } catch (IOException ignored) {
             return new ArrayList<>();
         }
-
     }
 
     /**
-     * TODO DESCRIBE
-     *
-     * @return
+     * Get tasks ordered by date.
+     * @param user the user id
+     * @param profile the profile id
+     * @return a list of tasks ordered by date
      */
-    public List<Task> getEntriesOrderedByDate() {
-
+    public List<Task> getEntriesOrderedByDate(long user, int profile) {
         SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-
-        Cursor cursor = db.rawQuery("SELECT * FROM TASKS ORDER BY REMINDER_DATE", null);
-
+        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE USER=? AND PROFILE=? ORDER BY REMINDER_DATE", new String[]{
+                String.valueOf(user),
+                String.valueOf(profile)
+        });
         List<Task> entries = getListOfTasks(cursor);
         cursor.close();
-        ;
-
-        return entries;
-
-    }
-
-    /**
-     * TODO DESCRIBE
-     *
-     * @return
-     */
-    public List<Task> getNoList() {
-        SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-
-        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE LIST IS NULL ORDER BY POSITION", null);
-
-        List<Task> entries = getListOfTasks(cursor);
-        cursor.close();
-        ;
-
         return entries;
     }
 
     /**
-     * TODO DESCRIBE
-     *
-     * @return
+     * Get all task that have no list.
+     * @param user the user id
+     * @param profile the profile id
+     * @return a list of tasks without a list
+     */
+    public List<Task> getNoList(long user, int profile) {
+        SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
+        Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE LIST IS NULL AND USER=? AND PROFILE=? ORDER BY POSITION", new String[]{
+                String.valueOf(user),
+                String.valueOf(profile)
+        });
+        List<Task> entries = getListOfTasks(cursor);
+        cursor.close();
+        return entries;
+    }
+
+    /**
+     * Retrieve all tasks for PICK.
+     * @return a list of tasks that can be picked
      */
     public List<Task> loadTasksToPick() {
-
         List<Task> tasksToPick;
-
         long epoch = ZenSQLiteHelper.dateToEpoch(Instant.now());
-
         /*
          *  for all entries:
          *
@@ -648,37 +480,30 @@ public class TaskManager implements TaskManagerI {
          *
          *  3. else check if reminder date <= today, if yes -> add
          */
-
         SQLiteDatabase db = zenSqLiteHelper.getReadableDatabase();
-
-
         Cursor cursor = db.rawQuery("SELECT * FROM TASKS WHERE RECURRENCE IS NULL AND (FOCUS>0 OR " +
                 "(REMINDER_DATE IS NULL AND (DROPPED>0 OR LIST=NULL)) OR " +
                 "(REMINDER_DATE IS NOT NULL AND REMINDER_DATE<=" + epoch + ")) ORDER BY POSITION", null);
-
-
         tasksToPick = getListOfTasks(cursor);
-
         cursor.close();
-        ;
-
         return tasksToPick;
     }
 
     @Override
     public synchronized void updateId(long userId, int profile, long Task, long id) throws DuplicateIdException {
-
         if (getTask(userId, profile, id).isPresent())
             throw new DuplicateIdException("New id for Task already exists: id " + id);
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
         ContentValues values = new ContentValues();
         values.put("ID", id);
-        db.update("TASKS", values, "USER = ? AND PROFILE = ? AND ID = ?", new String[]{String.valueOf(userId), String.valueOf(profile), String.valueOf(Task)});
+        db.update("TASKS", values, "USER = ? AND PROFILE = ? AND ID = ?", new String[]{
+                String.valueOf(userId),
+                String.valueOf(profile),
+                String.valueOf(Task)});
     }
 
     @Override
     public void postTask(Task Task) {
-
         SQLiteDatabase db = zenSqLiteHelper.getWritableDatabase();
         ContentValues values = new ContentValues();
         System.out.println("POST " + Task.getId());
